--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -3,18 +3,19 @@
    ========================================================================== */
 
 /* Colors */
-$text-color: #000 !default;
+$background-color: #ffffff !default;
+$text-color: #050505 !default;
 $muted-text-color: $text-color !default;
-$primary-color: #ff0000 !default;
-$border-color: mix(#fff, $text-color, 75%) !default;
-$footer-background-color: #000 !default;
-$link-color: #0000ff !default;
+$primary-color: #222222 !default;
+$border-color: mix(#eeeeee, $text-color, 75%) !default;
+$footer-background-color: #050505 !default;
+$link-color: #030303 !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
-$navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
+$navicon-link-color-hover: mix(#eeeeee, $text-color, 80%) !default;
 
 /* contrast syntax highlighting (base16) */
-$base00: #000000 !default;
+$base00: #050505 !default;
 $base01: #242422 !default;
 $base02: #484844 !default;
 $base03: #6c6c66 !default;
@@ -43,7 +44,7 @@ $base0f: #b18a3d !default;
 }
 
 .page__footer {
-  color: #fff !important; // override
+  color: #eee !important; // override
 }
 
 .page__footer-follow .social-icons i,
