Updated About page, Added Internal linking to Jekyll Post

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,9 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+h2.archive__item-title{
+  a{
+    text-decoration:none;
+  }
+}
