Updated Logo and made Collections, Also made some profile changes,
added notice board in About page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,5 +26,5 @@ layout: archive
 <h3 class="archive__subtitle">Group By</h3>
 <ul class="taxonomy__index">
     <li><a href="/posts-tags/"><strong>Posts by Tags</strong></a></li>
-    <li><a href="/posts-categories/"><strong>Posts by Categories</strong></a></li>
+    <li><a href="/post-collections/"><strong>Collections</strong></a></li>
 </ul>
