Updated Navigation to tags and collections

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,8 +23,8 @@ layout: archive
 
 {% include paginator.html %}
 <div style="height: 100px"></div>
-<h3 class="archive__subtitle">Group By</h3>
+<h3 class="archive__subtitle">Navigate By</h3>
 <ul class="taxonomy__index">
-    <li><a href="/posts-tags/"><strong>Posts by Tags</strong></a></li>
-    <li><a href="/post-collections/"><strong>Collections</strong></a></li>
+    <li><a href="/tags/"><strong>Tags</strong></a></li>
+    <li><a href="/collections/"><strong>Collections</strong></a></li>
 </ul>
